<resources>
    <string name="app_name">La Gare</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="la_gare">La Gare</string>
    <string name="hello_explore">Hola explora lo que tenemos para ti</string>
    <string name="sign_in">Inicia Sesion</string>
    <string name="register">Registrate</string>
    <string name="name">Nombre</string>
    <string name="paternal_surname">Apellido Paterno</string>
    <string name="maternal_surname">Apellido Materno</string>
    <string name="email_address">Correo Electronico</string>
    <string name="password">Contraseña</string>
    <string name="phone_number">Numero de Telefono</string>
    <string name="address">Direccion</string>
    <string name="street_number">Numero Exterior</string>
    <string name="postal_code">Codigo Postal</string>
    <string name="references">Referencias</string>
    <string name="daily_meal">Comida Diaria</string>
    <string name="favourite">Favoritos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">Mi Carrito</string>
    <string name="mauro_morales_alta">Mauro Morales Alta</string>
    <string name="mauromoralesalta_gmail_com">mauromoralesalta@gmail.com</string>
    <string name="_10_00_23_00">10:00 - 23:00</string>
    <string name="product_name">Nombre del producto</string>
    <string name="_5_0">5.0</string>
    <string name="view_more">Ver mas</string>
    <string name="your_favourite_and_testy_food_is_here">Tu comida favorita y irritable esta aqui!</string>
    <string name="make_order">Realizar Orden</string>
    <string name="my_carts">Mi Carrito</string>
</resources>