<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_add_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_daily_meal"
            android:icon="@drawable/baseline_all_inclusive_24"
            android:title="@string/daily_meal" />
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/baseline_favorite_24"
            android:title="@string/favourite" />
        <item
            android:id="@+id/nav_my_cart"
            android:icon="@drawable/baseline_add_shopping_cart_24"
            android:title="@string/my_cart" />

        <!-- ✅ Nuevo ítem -->
        <item
            android:id="@+id/nav_order_history"
            android:icon="@drawable/baseline_history_edu_24"
            android:title="Historial de pedidos" />
    </group>
</menu>
