<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegistrationActivity"
    tools:layout_editor_absoluteX="-41dp"
    tools:layout_editor_absoluteY="6dp">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="@drawable/foreground_design"
        android:scaleType="centerCrop"
        android:src="@drawable/bg4"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-31dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lobster"
        android:text="@string/la_gare"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="33sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="#FBFBFB"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="104dp" />

    <Button
        android:onClick="mainActivity"
        android:textColor="@color/white"
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:background="@drawable/btn_bg_design"
        android:padding="14dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#CCCCCC"
        android:drawableStart="@drawable/baseline_account_circle_24"
        android:drawablePadding="13dp"
        android:hint="@string/name"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@id/imageView3"
        app:layout_constraintStart_toStartOf="@id/imageView3"
        app:layout_constraintWidth_percent=".8"
        tools:layout_editor_absoluteY="136dp" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:backgroundTint="#CCCCCC"
        android:drawableStart="@drawable/baseline_account_circle_24"
        android:drawablePadding="13dp"
        android:hint="@string/paternal_surname"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@id/imageView3"
        app:layout_constraintStart_toStartOf="@id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/editText1"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:backgroundTint="#CCCCCC"
        android:drawableStart="@drawable/baseline_account_circle_24"
        android:drawablePadding="13dp"
        android:hint="@string/maternal_surname"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@id/imageView3"
        app:layout_constraintStart_toStartOf="@id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/editText1"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:backgroundTint="#CCCCCC"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="13dp"
        android:hint="@string/email_address"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@id/imageView3"
        app:layout_constraintStart_toStartOf="@id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/editText1"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:backgroundTint="#CCCCCC"
        android:drawableLeft="@drawable/baseline_done_24"
        android:drawablePadding="13dp"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@id/imageView3"
        app:layout_constraintStart_toStartOf="@id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/editText1"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:backgroundTint="#CCCCCC"
        android:drawableLeft="@drawable/baseline_contact_phone_24"
        android:drawablePadding="13dp"
        android:hint="@string/phone_number"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@id/imageView3"
        app:layout_constraintStart_toStartOf="@id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/editText1"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="224dp"
        android:backgroundTint="#CCCCCC"
        android:drawableLeft="@drawable/baseline_emergency_share_24"
        android:drawablePadding="13dp"
        android:hint="@string/address"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@id/imageView3"
        app:layout_constraintStart_toStartOf="@id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/editText1"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="268dp"
        android:backgroundTint="#CCCCCC"
        android:drawableLeft="@drawable/baseline_call_missed_24"
        android:drawablePadding="13dp"
        android:hint="@string/street_number"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@id/imageView3"
        app:layout_constraintStart_toStartOf="@id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/editText1"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="312dp"
        android:backgroundTint="#CCCCCC"
        android:drawableLeft="@drawable/baseline_bolt_24"
        android:drawablePadding="13dp"
        android:hint="@string/postal_code"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@id/imageView3"
        app:layout_constraintStart_toStartOf="@id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/editText1"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="356dp"
        android:backgroundTint="#CCCCCC"
        android:drawableLeft="@drawable/baseline_chalet_24"
        android:drawablePadding="13dp"
        android:hint="@string/references"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@id/imageView3"
        app:layout_constraintStart_toStartOf="@id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/editText1"
        app:layout_constraintWidth_percent=".8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:text="Ya tienes una cuenta?"
        android:textAlignment="center"
        android:textColor="#FBFBFB"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.571" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="18sp"
        android:textStyle="bold"
        android:onClick="login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.636" />


</androidx.constraintlayout.widget.ConstraintLayout>

