<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="@drawable/foreground_design"
        android:scaleType="centerCrop"
        android:src="@drawable/bg4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lobster"
        android:text="@string/la_gare"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="33sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <TextView
        android:id="@+id/textViewSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="#FBFBFB"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/editText_login_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#CCCCCC"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="13dp"
        android:hint="@string/email_address"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/textViewSignIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="24dp" />

    <EditText
        android:id="@+id/editText_login_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#CCCCCC"
        android:drawableStart="@drawable/baseline_done_24"
        android:drawablePadding="13dp"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/editText_login_email"
        app:layout_constraintStart_toStartOf="@id/editText_login_email"
        app:layout_constraintEnd_toEndOf="@id/editText_login_email"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg_design"
        android:padding="14dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:onClick="loginUser"
        app:layout_constraintTop_toBottomOf="@id/editText_login_password"
        app:layout_constraintStart_toStartOf="@id/editText_login_password"
        app:layout_constraintEnd_toEndOf="@id/editText_login_password"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/textViewNoAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Aun no tienes cuenta?"
        android:textAlignment="center"
        android:textColor="#FBFBFB"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/button"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="68dp" />

    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/button"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="90dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
